--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,7 +30,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="display Name"
+        android:hint="Display First Name"
         android:id="@+id/tvDisplayFirstName"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
@@ -58,8 +58,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="display lastname "
-        android:id="@+id/displayLastName"
+        android:hint="Display Last Name "
+        android:id="@+id/tvDisplayLastName"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -70,15 +70,43 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvPhoneNumber"
-        android:text="Phone Number"
+        android:id="@+id/tvEmail"
+        android:text="Email"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:paddingTop="20dp"
         android:fontFamily = "serif-monospace"
         android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/displayLastName"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayLastName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+    />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="display email"
+        android:id="@+id/tvDisplayEmail"
+        android:textSize="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvContact"
+        android:text="Contact Number (optional)"
+        android:textSize="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:paddingTop="20dp"
+        android:fontFamily = "serif-monospace"
+        android:textColor="@color/app_color"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -86,12 +114,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="display Phone Number"
+        android:hint="Display Phone Number"
         android:id="@+id/tvDisplayPhoneNumber"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
+        app:layout_constraintTop_toBottomOf="@+id/tvContact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -115,40 +143,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint=" display Plate Number"
+        android:hint="Display Plate Number"
         android:id="@+id/tvDisplayPlateNumber"
         android:textSize="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tvPlateNumber"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvEmailId"
-        android:text="Email Id"
-        android:textSize="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:paddingTop="20dp"
-        android:fontFamily = "serif-monospace"
-        android:textColor="@color/app_color"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplayPlateNumber"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-    />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="display email"
-        android:id="@+id/tvDisplayEmailId"
-        android:textSize="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmailId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -161,7 +161,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplayEmailId"
+        app:layout_constraintTop_toBottomOf="@+id/tvDisplayPlateNumber"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
