--- a/app/src/main/res/layout/fragment_parking_details.xml
+++ b/app/src/main/res/layout/fragment_parking_details.xml
@@ -169,6 +169,16 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="370dp"
+            android:layout_height="335dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.531"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
