--- a/app/src/main/res/layout/fragment_parking_details.xml
+++ b/app/src/main/res/layout/fragment_parking_details.xml
@@ -170,13 +170,15 @@
         </androidx.cardview.widget.CardView>
 
         <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="370dp"
-            android:layout_height="335dp"
+            android:id="@+id/mapViewParkingDetails"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.531"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/geoLocationCard" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
