--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -132,14 +132,24 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDisplayPlateNumber"
         app:layout_constraintVertical_bias="1.0" />
 
+
     <Button
         android:id="@+id/btDeleteAccount"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Delete Account"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+
+    <Button
+        android:id="@+id/btnLogOut"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingLeft="2dp"
+        android:text="Log Out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btDeleteAccount" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
