--- a/app/src/main/res/layout/fragment_add_parking.xml
+++ b/app/src/main/res/layout/fragment_add_parking.xml
@@ -148,8 +148,7 @@
             <Switch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/geoSwitch"
-                tools:ignore="UseSwitchCompatOrMaterialXml" />
+                android:id="@+id/geoSwitch" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -222,6 +221,15 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/tvLocationError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please select location mannual or automatic!"
+            android:textColor="#DC0808"
+            android:paddingLeft="20dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/geoLocationCard" />
 
         <Button
             android:layout_width="match_parent"
